# aeruginous-tbr

./: .clippy.toml  .gitattributes  .gitignore  .rustfmt.toml  CITATION.cff  Cargo.toml  README.md
.github/: CODEOWNERS  release.yml
.github/workflows/: cff.yml  ci.yml  comment-changes.yml  mirror.yml  pr.yml  rustfmt.yml
changelog.d/: 20240215_145147_GitHub_Actions_configure.ron  20240215_192423_GitHub_Actions_rust-setup.ron  setup.rst
src/: lib.rs  tar_archive.rs
tests/: tar_archive.rs
