[dependencies]
brotli = { version = "3.4.0", default-features = false }
sysexits = "0.7.11"
tar = { version = "0.4.40", default-features = false }

[package]
authors = ["Kevin Matthes <aeruginous.rs@gmail.com>"]
categories = ["algorithms", "compression", "filesystem"]
description = "A plugin for the Aeruginous Open Source Development Toolbox to interact with TAR.BR files."
edition = "2021"
homepage = "https://github.com/kevinmatthes/aeruginous-tbr"
include = ["/src"]
keywords = ["aeruginous", "brotli", "tar", "tbr"]
license = "GPL-3.0"
name = "aeruginous-tbr"
readme = "README.md"
repository = "https://github.com/kevinmatthes/aeruginous-tbr"
rust-version = "1.76.0"
version = "0.1.0"

[dev-dependencies]
aeruginous-io = "0.8.0"
